--- a/ORDERM-SERVICE.properties
+++ b/ORDERM-SERVICE.properties
@@ -5,9 +5,12 @@ server.port=8082
 #eureka.client.service-url.defaultZone=http://localhost:8761/eureka
 eureka.client.service-url.defaultZone=http://eureka-server:8761/eureka/
 
-spring.datasource.url=jdbc:mysql://localhost:3306/orderm_db
-spring.datasource.username=root
-spring.datasource.password=SreeRama@005
+#spring.datasource.url=jdbc:mysql://localhost:3306/orderm_db
+#spring.datasource.username=root
+#spring.datasource.password=SreeRama@005
+spring.datasource.url=jdbc:mysql://ecom-order-demo-securenotes.d.aivencloud.com:24849/defaultdb?sslMode=REQUIRED
+spring.datasource.username=avnadmin
+spring.datasource.password=AVNS_lv14kXkBaVQ5SrngAEu
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 
