--- a/USERM-SERVICE.properties
+++ b/USERM-SERVICE.properties
@@ -2,8 +2,8 @@ spring.application.name=USERM-SERVICE
 
 server.port=8081
 
-#eureka.client.service-url.defaultZone=http://localhost:8761/eureka
-eureka.client.service-url.defaultZone=http://eureka-server:8761/eureka/
+eureka.client.service-url.defaultZone=http://localhost:8761/eureka
+#eureka.client.service-url.defaultZone=http://eureka-server:8761/eureka/
 
 #spring.datasource.url=jdbc:mysql://localhost:3306/userm_db
 #spring.datasource.username=root
