--- a/ORDERM-SERVICE.properties
+++ b/ORDERM-SERVICE.properties
@@ -2,8 +2,8 @@ spring.application.name=ORDERM-SERVICE
 
 server.port=8082
 
-eureka.client.service-url.defaultZone=http://localhost:8761/eureka
-#eureka.client.service-url.defaultZone=http://eureka-server:8761/eureka/
+#eureka.client.service-url.defaultZone=http://localhost:8761/eureka
+eureka.client.service-url.defaultZone=http://eureka-server:8761/eureka/
 
 #spring.datasource.url=jdbc:mysql://localhost:3306/orderm_db
 #spring.datasource.username=root
