--- a/KafkaOrderService.properties
+++ b/KafkaOrderService.properties
@@ -12,7 +12,7 @@ spring.datasource.password=SreeRama@005
 #spring.datasource.url=jdbc:mysql://ecom-order-demo-securenotes.d.aivencloud.com:24849/defaultdb?sslMode=REQUIRED
 #spring.datasource.username=avnadmin
 #spring.datasource.password=AVNS_lv14kXkBaVQ5SrngAEu
-#spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 
 spring.jpa.hibernate.ddl-auto=update
